add some old jdk 18 results, update dependencies