@@ -9,10 +9,10 @@
 	<version>0.1-SNAPSHOT</version>
 
 	<properties>
-		<java.version>17</java.version>
+		<java.version>19</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-		<jmh.version>1.35</jmh.version>
+		<jmh.version>1.36</jmh.version>
 	</properties>
 
 	<dependencies>
@@ -61,7 +61,6 @@
 					<encoding>UTF-8</encoding>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
-					<!--<compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.openjdk.jmh</groupId>
@@ -70,6 +69,7 @@
 						</path>
 					</annotationProcessorPaths>
 					<compilerArgs>
+						<compilerArg>--enable-preview</compilerArg>
 						<compilerArg>-Xlint:all</compilerArg>
 					</compilerArgs>
 				</configuration>
@@ -104,7 +104,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>versions-maven-plugin</artifactId>
-				<version>2.11.0</version>
+				<version>2.13.0</version>
 			</plugin>
 			<plugin>
 				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-clean-plugin -->
@@ -142,7 +142,7 @@
 			<plugin>
 				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.2.2</version>
+				<version>3.3.0</version>
 			</plugin>
 			<plugin>
 				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-dependency-plugin -->
